--- a/index.html
+++ b/index.html
@@ -1,17 +1,25 @@
 <!DOCTYPE html>
-<html lang="en">
+<html >
 <head>
-    <meta charset="UTF-8">
-    <title>موقــعي</title>
-
-    <!-- 👇هنا style قم بإضافة وسم   -->
     
+    <title>موقــعي</title>
+<link rel=stylesheet href="./style.css">
+    <!-- 👇هنا style قم بإضافة وسم   -->
+    <style>
+h1{
+     color: rgb(167, 33, 33);
+    
+}
+.h1{
+    text-align: center;
+}
+    </style>
 
 </head>
 <body>
     <!-- اكتب اسمك بعد مرحباً، -->
     <!-- headالى ال cssثم غير لون الخط عن طريق اضافة كود   -->
-    <h1>مرحبا، انا اسمي</h1>
+    <h1 class="h1">مرحبا، انا اسمي جوان الحليل</h1>
 
 
     <!-- styles.css قم بإنشاء ملف جديد وقم بتسميته  -->
@@ -19,14 +27,14 @@
 
 
     <!-- قم بتغيير طريقة عرض الصور بحيث تظهر الصور تحت بعض -->
-    <img src="./img/ps4.png" alt="الكويت تبرمج">
-    <img src="./img/Nintendo.png" alt="الكويت تبرمج">
-    <img src="./img/pc.png" alt="الكويت تبرمج">
+    <img src="./img/ps4.png" alt="الكويت تبرمج"class="img">
+    <img src="./img/Nintendo.png" alt="الكويت تبرمج"class="img">
+    <img src="./img/pc.png" alt="الكويت تبرمج"class="img">
 
      <!--  بعد ذلك قم باخفاء النقاط من القائمه  -->
      <div>
         <h3>منصات الالعاب المتوفره</h3>
-        <ul>
+        <ul class="ul">
             <li>PS4</li>
             <li>nintendo switch</li>
             <li>PC</li>
@@ -39,44 +47,44 @@
 <!-- Nintendo: red   -->
 <!-- PC:       green -->
 <!-- تلميح: يجب عليك اضافة كلاس لكل اسم -->
-    <table>
+    <table border="10px">
         <tr>
             <th>الاسم</th>
             <th>العمر</th>
             <th>اللعبه المفضله</th>
             <th>المنصه</th>
         </tr>
-        <tr>
-            <td>احمد</td>
+        <tr class="blue">
+            <td >احمد</td>
             <td>16</td>
             <td>call of duty</td>
             <td>PS4</td>
         </tr>
-        <tr>
-            <td>ساره</td>
+        <tr class="red">
+            <td >ساره</td>
             <td>15</td>
             <td>mario party</td>
             <td>nintendo switch</td>
         </tr>
-        <tr>
+        <tr class="green">
             <td>علي</td>
             <td>15</td>
             <td>league of legends</td>
             <td>PC</td>
         </tr>
-        <tr>
-            <td>عبدالله</td>
+        <tr class="blue">
+            <td >عبدالله</td>
             <td>14</td>
             <td>fifa</td>
             <td>PS4</td>
         </tr>
-        <tr>
-            <td>دانه</td>
+        <tr class="red">
+            <td >دانه</td>
             <td>22</td>
             <td>super smash bros</td>
             <td>nintendo switch</td>
         </tr>
-        <tr>
+        <tr class="green">
             <td>ليلى</td>
             <td>17</td>
             <td>minecraft</td>
